my_build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
/home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/ItemFragment.java:150: error: cannot find symbol
        if (isNewInstance()) {
            ^
  symbol:   method isNewInstance()
  location: class ItemFragment
/home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/ItemFragment.java:185: error: cannot find symbol
        if (isNewInstance()) {
            ^
  symbol:   method isNewInstance()
  location: class ItemFragment
/home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/WebFragment.java:169: error: cannot find symbol
        if (isNewInstance()) {
            ^
  symbol:   method isNewInstance()
  location: class WebFragment
/home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/WebFragment.java:192: error: cannot find symbol
        if (isNewInstance()) {
            ^
  symbol:   method isNewInstance()
  location: class WebFragment
Note: /home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/ItemActivity.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

[Incubating] Problems report is available at: file:///home/sheepdestroyer/LAB/materialisheep/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/sheepdestroyer/LAB/materialisheep/app/src/main/java/io/github/sheepdestroyer/materialisheep/ItemFragment.java:150: error: cannot find symbol
          if (isNewInstance()) {
              ^
    symbol:   method isNewInstance()
    location: class ItemFragment
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 957ms
20 actionable tasks: 1 executed, 19 up-to-date
